--- a/index.html
+++ b/index.html
@@ -2,12 +2,22 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <link rel="stylesheet" href="common.sass">
         <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+
     </head>
     <body>
-        ss
+        <nav>
+            <ul>
+              <li class="active"><a href="">First</a></li>
+              <li><a href="">Second</a></li>
+              <li><a href="">Third</a></li>
+            </ul>
+          </nav>
     </body>
+    <footer>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+    </footer>
 
 </html>
